--- a/firebase.json
+++ b/firebase.json
@@ -1,22 +1,15 @@
 {
-  "flutter": {
-    "platforms": {
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "notifactiontest-ea12b",
-          "configurations": {
-            "web": "1:507573897639:web:577f1c1a24f53e15054e82"
-          }
-        }
-      }
-    }
-  },
   "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+    "public": "hosting",
+    "rewrites": [
+      {
+        "source": "/admin/**",
+        "destination": "/admin/index.html"
+      },
+      {
+        "source": "/company/**",
+        "destination": "/company/index.html"
+      }
     ]
   }
 }
